--- a/wharetogo.css
+++ b/wharetogo.css
@@ -273,7 +273,7 @@ ul {
   height: 40px;
   width: 40px;
   background-color: rgba(255, 255, 255, 0.2);
-  margin-right: 0 10px 10px 0;
+  margin-right:  10px;
   text-align: center;
   line-height: 40px;
   border-radius: 50%;
